--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
 
 group = 'ru.netology'
 version = '1.0-SNAPSHOT'
+sourceCompatibility = 11
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
@@ -14,6 +17,11 @@ dependencies {
     testImplementation 'com.codeborne:selenide:6.17.1'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation "io.rest-assured:rest-assured:4.3.0"
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    testImplementation 'com.google.code.gson:gson:2.8.6'
 }
 
 test {
